syntax = "proto3";

option csharp_namespace = "num2words";

message NumberRequest {
  int64 number = 1;
}

message WordsResponse {
  string words = 1;
}

service Parser {
  rpc FromNumberToWords(NumberRequest) returns (WordsResponse) {
  }
}
